# prospect

./: .gitignore  README.md
.devcontainer/: .env  compose.yaml  devcontainer.json  on-start-container.sh  on-start-host.sh  pre-commit
prospect_core/: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
prospect_core/prospect_core/cli/: __init__.py
prospect_core/prospect_core/core/: __init__.py  graph.py  work_unit.py
prospect_core/tests/: conftest.py  test_import.py  utils.py
prospect_core/tests/test_cli/: test_cli.py
prospect_core/tests/test_core/: test_work_unit.py
prospect_core/tests/test_core/test_graph/: components.py  conftest.py  test_graph.py
prospect_tools/: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
prospect_tools/prospect_tools/cli/: __init__.py
prospect_tools/tests/: test_import.py
prospect_tools/tests/test_cli/: test_cli.py
